# qobuz

./: .gitignore  Cargo.toml  README.md
src/: app.rs  logging.rs  main.rs
src/api/: api.rs  client.rs  mod.rs  models.rs
src/data/: artists.rs  db.rs  mod.rs  playlists.rs  releases.rs  tracks.rs
src/types/: mod.rs  release_type.rs
tests/cli/: cli.rs  helpers.rs
tests/cli/responses/: album_page.json  artist_page_0.json  artist_page_1.json  playlist_create.json
